--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
 }
 header, footer {
-  background-color: #ffa500;
+  background-color: #ADD8E6;
   text-align: center;
 /*  min-width: 500px; */
 }
@@ -43,7 +43,7 @@ h2 {
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: left;
-  color: #ffa500;
+  color: #4682B4;
   padding: 10px 0px 10px 10px;
 }
 
@@ -82,7 +82,7 @@ object-fit: cover;
 }
 
 .myButton:hover {
-    background-color:#e69708;
+    background-color:#4682B4;
 }
 
 .myButton:active {
