--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ main {
   align-content: center;
 }
 h1 {
-  font-family: 'Patua One', cursive;
+  font-family: 'Work Sans';
   font-size: calc(1em + 3vw);
   padding-bottom: .67em;
   border-bottom: 1px solid;
@@ -38,7 +38,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'Patua One', cursive;
+  font-family: 'Work Sans';
   font-size: 30px;
   font-weight: 600;
   letter-spacing: 0.3px;
@@ -111,7 +111,7 @@ object-fit: cover;
 
 .mins {
   display: inline-block;
-  font-family: 'Patua One', cursive;
+  font-family: 'Work Sans';
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.3px;
@@ -145,8 +145,14 @@ object-fit: cover;
   margin: auto;
 }
 
-footer {
-  margin-top: 44px;
+footer div {
+    height: 100%;
+    font-family: 'Work Sans';
+    font-size: 14px;
+    display: flex;
+    align-content: center;
+    padding: 10px 20px;
+    color: rgba(255, 255, 255, 0.7);
 }
 @media all and (max-width:700px) {
   main {
