--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,9 @@ body {
   margin: 0;
 }
 header, footer {
-  background-color: #ADD8E6;
+  background: #3a7bd5;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #3a6073, #3a7bd5);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #3a6073, #3a7bd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   text-align: center;
 /*  min-width: 500px; */
 }
@@ -43,7 +45,7 @@ h2 {
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: left;
-  color: #4682B4;
+  color: #3a6073;
   padding: 10px 0px 10px 10px;
 }
 
@@ -51,6 +53,10 @@ img {
   width: 100%;
   height: 50vh;
 object-fit: cover;
+}
+
+a {
+  color: #3a7bd5
 }
 .wrapper {
     max-width: 1150px;
