--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ header, footer {
 /*  min-width: 500px; */
 }
 header {
-  font-family: 'Slabo 27px', serif;
+  font-family: 'Quicksand', sans-serif;
   color: #fff;
   min-height: 30vh;
   display: flex;
@@ -32,7 +32,7 @@ main {
   align-content: center;
 }
 h1 {
-  font-family: 'Work Sans';
+  font-family: 'Quicksand', sans-serif;
   font-size: calc(1em + 3vw);
   padding-bottom: .67em;
   border-bottom: 1px solid;
@@ -40,7 +40,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'Work Sans';
+  font-family: 'Quicksand', sans-serif;
   font-size: 30px;
   font-weight: 600;
   letter-spacing: 0.3px;
@@ -68,7 +68,7 @@ a {
 .bio {
   color: #ffffff;
   font-size: 24px;
-  font-family: 'Work Sans';
+  font-family: 'Quicksand', sans-serif;
 }
 .buttonBox {
   display: flex;
@@ -117,7 +117,7 @@ a {
 
 .mins {
   display: inline-block;
-  font-family: 'Work Sans';
+  font-family: 'Quicksand', sans-serif;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.3px;
@@ -128,7 +128,7 @@ a {
 }
 
 .description {
-  font-family: 'Slabo 27px', serif;
+  font-family: 'Quicksand', sans-serif;
   font-size: 20px;
   font-weight: 300;
   line-height: 1.29;
@@ -153,7 +153,7 @@ a {
 
 footer div {
     height: 100%;
-    font-family: 'Work Sans';
+    font-family: 'Quicksand', sans-serif;
     font-size: 14px;
     display: flex;
     align-content: center;
